Bump to Flink 1.18.1 Expanded and fixed comments according to feedback Expanded README Removed all Java 11 features Fixed amp-signer groupId and artifactId Throw specific exception instead of RuntimeException Improved readability in PrometheusAsyncHttpClientBuilder Replaced Java stream with simple loop for counting request size New test for PrometheusSinkWriter Updated to new AsynSyncBase constructor Fixed all relevant literals as constants. Added *.proto classes and documented them in README Added configurable metric-group Removed nested if-else in response callback Abstracted metrics using a callaback Moved AWS SDK dependency to AMP Signer module Disable creating dependency-reduced-pom.xml, that upsets checkstyle Sample app: random sample generator now generates dummy metrics, no longer referring to "instances", "CPU" or "Memory" Change interfaces to @PublicEvolving